prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/50k_lambdas.diag.txt
ERROR: AST too big. Consider simplifying it
testData/diagnostics/50k_lambdas.nut:1:93

@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()
                                                                                             ^
@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()


